--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,18 +30,23 @@
                     <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
                         <a class="nav-link" href="/admin/item/add" style="color:black">상품 관리</a>
                     </li>
-                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">
-                        <a class="nav-link" href="/user/item/search" style="color:black">상품 검색</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">
-                        <a class="nav-link" href="/user/item/cart" style="color:black">장바구니</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">
-                        <a class="nav-link" href="/orders">구매이력</a>
-                    </li>
+<!--                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">-->
+<!--                        <a class="nav-link" href="/user/item/search" style="color:black">상품 검색</a>-->
+<!--                    </li>-->
+                    <form action="/user/item/search" method="post">
+                        <input type="text" placeholder="키워드를 입력하세요" name="title">
+                        <button type="submit" style="background:none; border: none;"><i class="ml-3 fas fa-search fa-2x" style="color: rgb(103,167,47);"></i></button>
+                    </form>
+
+<!--                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">-->
+<!--                        <a class="nav-link" href="/user/item/cart" style="color:black">장바구니</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">-->
+<!--                        <a class="nav-link" href="/orders" style="color:black">구매이력</a>-->
+<!--                    </li>-->
                 </ul>
-                <span class="navbar-text">
-                    <a class="fa fa-shopping-cart fa-2x p-2"></a>
+                <span class="navbar-text" sec:authorize="hasAnyAuthority('ROLE_USER')">
+                    <a href="/user/item/cart"  class="p-2" style="color:black"><i class="fas fa-shopping-cart fa-2x"></i></a>
                 </span>
                 <span class="navbar-text ml-3 nav-item dropdown">
                     <a class="far fa-user fa-2x p-2" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
@@ -54,7 +59,10 @@
                         </li>
                         <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link notBorder" href="/members/logout">로그아웃</a>
-                    </li>
+                        </li>
+                        <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link notBorder" href="/members/orders">구매이력</a>
+                        </li>
                     </div>
                 </span>
             </div>
