--- a/src/main/resources/templates/item/itemCart.html
+++ b/src/main/resources/templates/item/itemCart.html
@@ -30,6 +30,7 @@
             <td th:text="${cartdto.title}"></td>
             <td><input type="number" th:value="${cartdto.stockNumber}"></td>
             <td th:text="${cartdto.discount}"></td>
+            <td><button class="btn btn-primary">변경하기</button></td>
             <td><button class="btn btn-primary">주문하기</button></td>
         </tr>
         </tbody>
