--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}">
+      layout:decorate="~{layouts/loginLayout}">
 
 <th:block layout:fragment="css">
   <style>
+    body {
+      text-align: center;
+    }
+    .content {
+      margin: 100px auto;
+      width: 500px;
+    }
     .error {
       color: #bd2130;
+    }
+    .btn {
+      width: 500px;
+    }
+    .joinBtn {
+      border: 1px solid rgb(103,167,47);
+      color: rgb(103,167,47);
+      background-color: #ffffff;
     }
   </style>
 </th:block>
 
 <div layout:fragment="content">
+  <h1 class="mb-5" style="color: rgb(103,167,47);"><b>Book</b></h1>
   <form role="form" method="post" action="/members/login">
     <div class="form-group">
-      <label th:for="email">이메일</label>
+<!--      <label th:for="email">이메일</label>-->
       <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
     </div>
     <div class="form-group">
-      <label th:for="password">비밀번호</label>
+<!--      <label th:for="password">비밀번호</label>-->
       <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요">
     </div>
     <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-    <button class="btn btn-primary">로그인</button>
-    <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button>
+    <button class="btn" style="background-color: rgb(103,167,47); color: white">로그인</button>
+    <button type="button" class="joinBtn btn mt-2" onClick="location.href='/members/new'">회원가입</button>
     <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}">
   </form>
 </div>
