상세페이지 생성

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
 <div th:fragment="footer">
     <footer class="py-4 mt-auto">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3">
             © 2023 Copyright: kimjaehee
         </div>
     </footer>
