--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -103,6 +103,15 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<th:block layout:fragment="css">
+  <style>
+    a {
+      color: black;
+      text-decoration: none;
+    }
+  </style>
+</th:block>
+
 <th:block layout:fragment="script">
   <script th:inline="javascript">
     $('#myModal').on('shown.bs.modal', function () {
@@ -145,8 +154,8 @@
       </thead>
       <tbody>
       <tr th:each="info, status:${bookInfos}">
-        <td><img th:src="${info.imageSrc}" style="width: 65px"; height="95px"></td>
-        <td th:text="${info.title}"></td>
+        <td><a th:href="@{/user/book/detail/{id}(id=${status.index})}"><img th:src="${info.imageSrc}" style="width: 65px"; height="95px"></a> </td>
+        <td><a th:href="@{/user/book/detail/{id}(id=${status.index})}" th:text="${info.title}"></a></td>
         <td th:text="${info.author}"></td>
         <td th:text="${info.publisher}"></td>
         <td th:text="${info.discount}" class="price"> </td>
