--- a/src/main/resources/templates/item/itemCart.html
+++ b/src/main/resources/templates/item/itemCart.html
@@ -14,6 +14,7 @@
         <h1 class="display-4 text-center">장바구니</h1>
     </div>
 
+    <form action="/user/item/update" method="post">
     <table class="table">
         <thead>
         <tr>
@@ -21,19 +22,50 @@
             <th scope="col">상품정보</th>
             <th scope="col">수량</th>
             <th scope="col">상품금액</th>
-            <th scope="col">주문</th>
+            <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="cartdto:${cartDtos}">
             <th><img th:src="${cartdto.imageSrc}" style="width: 65px"; height="95px"></th>
             <td th:text="${cartdto.title}"></td>
-            <td><input type="number" th:value="${cartdto.stockNumber}"></td>
-            <td th:text="${cartdto.discount}"></td>
-            <td><button class="btn btn-primary">변경하기</button></td>
-            <td><button class="btn btn-primary">주문하기</button></td>
+            <td><input type="number" th:value="${cartdto.stockNumber}" name="stockNumber"></td>
+            <td th:text="${cartdto.discount}" class="price"></td>
+
+            <td>
+                <button class="btn btn-primary changeBtn" type="button"><input type="hidden" class="hiddenValue">변경하기</button>
+            </td>
         </tr>
         </tbody>
     </table>
+    </form>
+
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn text-center" style="background-color:rgb(103,167,47); color: white; width: 200px">주문하기</button>
+    </div>
+
 </div>
+<script>
+
+    const buttons = document.querySelectorAll(".changeBtn");
+
+    debugger;
+    buttons.forEach((el, index) => {
+        el.onclick = (e) => {
+            document.querySelector(".hiddenValue").setAttribute("name", "index");
+            debugger;
+            document.querySelector(".hiddenValue").setAttribute("value", index);
+        }
+    });
+
+    let price_td = document.querySelectorAll(".price")
+
+    for(let i = 0; i<price_td.length; i++) {
+        let price = price_td[i].innerHTML
+        price *= 1
+
+        if(price == 0) price_td[i].innerHTML = "절판"
+        else price_td[i].innerHTML = price.toLocaleString()
+    }
+</script>
 </html>
