--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout1}"
+      layout:decorate="~{layouts/loginLayout}"
       charset="utf-8">
 
 
 <th:block layout:fragment="css">
     <style>
-        .fieldError {
+        body {
+            text-align: center;
+        }
+        .content {
+            margin: 100px auto;
+            width: 500px;
+        }
+        .error {
             color: #bd2130;
+        }
+        .btn {
+            width: 500px;
+        }
+        .joinBtn {
+            border: 1px solid rgb(103,167,47);
+            color: rgb(103,167,47);
+            background-color: #ffffff;
         }
     </style>
 </th:block>
+
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
@@ -26,20 +42,19 @@
 
 
 <div layout:fragment="content">
+    <h1 class="mb-5" style="color: rgb(103,167,47);"><b>Book</b></h1>
+    <h3><b>회원가입</b></h3>
     <form action="/members/new" role="form" method="post" th:object="${memberFormDto}">
         <div class="form-group">
-            <label th:for="name">이름</label>
             <input type="text" class="form-control" th:field="*{name}" placeholder="이름을 입력해주세요">
             <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data </p>
         </div>
 
         <div class="form-group">
-            <label th:for="email">이메일</label>
             <input type="email" class="form-control" th:field="*{email}" placeholder="이메일을 입력해주세요">
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data </p>
         </div>
         <div class="form-group">
-            <label th:for="password">비밀번호</label>
             <input type="password" class="form-control" th:field="*{password}" placeholder="비밀번호를 입력해주세요">
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data </p>
         </div>
@@ -59,7 +74,7 @@
         <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="fieldError">Incorrect data </p>
 
         <div style="text-align: center">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn" style="background-color: rgb(103,167,47); color: white">회원가입</button>
         </div>
         <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}">
 
