--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -28,6 +28,7 @@
 
 <div layout:fragment="content">
   <h1 class="mb-5" style="color: rgb(103,167,47);"><b>Book</b></h1>
+    <h3><b>로그인</b></h3>
   <form role="form" method="post" action="/members/login">
     <div class="form-group">
 <!--      <label th:for="email">이메일</label>-->
