--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -51,27 +51,44 @@
         </div>
 
         <div class="form-group">
-            <input type="email" class="form-control" th:field="*{email}" placeholder="이메일을 입력해주세요">
-            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data </p>
+            <input type="text" class="form-control" th:field="*{userid}" placeholder="아이디 입력해주세요">
+            <p th:if="${#fields.hasErrors('userid')}" th:errors="*{userid}" class="fieldError">Incorrect data </p>
         </div>
+
         <div class="form-group">
             <input type="password" class="form-control" th:field="*{password}" placeholder="비밀번호를 입력해주세요">
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data </p>
         </div>
 
-        <div class="form-group form-check col-6">
-            <input class="form-check-input" type="radio" name="role" id="user" th:field="*{role}" value="USER">
-            <label class="form-check-label" for="user">
-                USER
-            </label>
+        <div class="form-group">
+            <input type="email" class="form-control" th:field="*{email}" placeholder="이메일을 입력해주세요">
+            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data </p>
         </div>
-        <div class="form-group form-check col-6">
-            <input class="form-check-input" type="radio" name="role" id="admin" th:field="*{role}" value="ADMIN">
-            <label class="form-check-label" for="admin">
-                ADMIN
-            </label>
+
+        <div class="form-group">
+            <input type="text" class="form-control" th:field="*{address}" placeholder="주소를 입력해주세요">
+            <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data </p>
         </div>
-        <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="fieldError">Incorrect data </p>
+
+<!--        <div class="form-group">-->
+<!--            <input type="hidden" class="form-control" th:field="*{role}" th:value="${memberFormDto.setRole(USER)}" value="USER">-->
+<!--        </div>-->
+
+<!--        <div class="row">-->
+<!--            <div class="form-group form-check col-6">-->
+<!--                <input class="form-check-input" type="radio" name="role" id="user" th:field="*{role}" value="USER">-->
+<!--                <label class="form-check-label" for="user">-->
+<!--                    LL-->
+<!--                </label>-->
+<!--            </div>-->
+<!--            <div class="form-group form-check col-6 ">-->
+<!--                <input class="form-check-input" type="radio" name="role" id="admin" th:field="*{role}" value="ADMIN">-->
+<!--                <label class="form-check-label" for="admin">-->
+<!--                    ADMIN-->
+<!--                </label>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="fieldError">Incorrect data </p>-->
 
         <div style="text-align: center">
             <button type="submit" class="btn" style="background-color: rgb(103,167,47); color: white">회원가입</button>
