--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -32,7 +32,8 @@
   <form role="form" method="post" action="/members/login">
     <div class="form-group">
 <!--      <label th:for="email">이메일</label>-->
-      <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
+<!--      <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">-->
+        <input type="text" name="userid" class="form-control" placeholder="아이디를 입력해주세요">
     </div>
     <div class="form-group">
 <!--      <label th:for="password">비밀번호</label>-->
