--- a/src/main/resources/templates/item/itemAdd.html
+++ b/src/main/resources/templates/item/itemAdd.html
@@ -3,36 +3,112 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
-<th:block layout:fragment="script">
-  <script th:inline="javascript">
 
-  </script>
+<th:block layout:fragment="css">
+    <style>
+        a {
+            text-decoration: none;
+        }
+
+        input, textarea{
+            border: none;
+        }
+
+    </style>
+</th:block>
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+
+    </script>
 </th:block>
 
 <div layout:fragment="content">
-    <div class="jumbotron">
-      <h1 class="display-4 text-center">상품 등록 확인</h1>
-      </div>
+    <section class="mt-5 p-3 container">
+        <h3 class="text-center mb-3"><b th:text="${bookDetail.title}"></b></h3>
+        <p class="text-center mb-5"><small class="text-secondary">저자</small> <span th:text="${bookDetail.author}"
+                                                                                   class="mr-3"></span>|<span
+                th:text="${bookDetail.publisher}" class="ml-3"></span></p>
 
-  <table class="table">
-    <thead>
-    <tr>
-      <th scope="col">이미지</th>
-      <th scope="col">제목</th>
-      <th scope="col">저자</th>
-      <th scope="col">출판사</th>
-      <th scope="col">수량</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="bookdto:${bookDtos}">
-      <th><img th:src="${bookdto.imageSrc}" style="width: 65px"; height="95px"></th>
-      <td th:text="${bookdto.title}"></td>
-      <td th:text="${bookdto.author}"></td>
-      <td th:text="${bookdto.publisher}"></td>
-      <td th:text="${bookdto.stockNumber}"></td>
-    </tr>
-    </tbody>
-  </table>
+        <div class="row">
+            <div class="col-md-4 col-12">
+                <img th:src="${bookDetail.imageSrc}" style="width: 100%">
+            </div>
+          <form action="/admin/item/add" method="post" th:object="${bookFormDto}">
+            <div class="col-md-8 col-12">
+                    <table>
+                        <tr>
+                            <input type="hidden" th:value="${bookDetail.imageSrc}" name="imgSrc">
+                            <input type="hidden" th:field="*{id}">
+                        </tr>
+                        <tr>
+                            <select th:field="*{bookSellStatus}" class="custom-select">
+                                <option value="SELL">판매중</option>
+                                <option value="SOLD_OUT">품절</option>
+                            </select>
+                        </tr>
+                        <tr>
+                            <td class="p-2 pr-4">제목</td>
+                            <td class="p-2"><input type="text" readonly th:value="${bookDetail.title}" name="title">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="p-2 pr-4">작가</td>
+                            <td class="p-2"><input type="text" readonly th:value="${bookDetail.author}" name="author">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="p-2 pr-4">출판사</td>
+                            <td class="p-2"><input type="text" readonly th:value="${bookDetail.publisher}"
+                                                   name="publisher"></td>
+                        </tr>
+                        <tr>
+                            <td class="p-2 pr-4">ISBN</td>
+                            <td class="p-2"><input type="text" readonly th:value="${bookDetail.isbn}" name="isbn"></td>
+                        </tr>
+                      <tr>
+                        <td class="p-2 pr-4">상세설명</td>
+                        <td class="p-2"><textarea maxlength="500" readonly th:text="${bookDetail.description}" name="description" class="description"></textarea></td>
+                      </tr>
+                        <tr>
+                            <td class="p-2 pr-4">가격</td>
+                            <td class="p-2"><input type="number" readonly th:value="${bookDetail.discount}"
+                                                   name="discount"></td>
+                        </tr>
+                        <tr>
+                            <td class="p-2 pr-4">수량</td>
+                            <td class="p-2"><input type="nuber" name="stockNumber" th:field="*{stockNumber}"></td>
+                        </tr>
+                    </table>
+            </div>
+            <div class="container-fluid text-center bg-light p-3 mt-4 fixed-bottom">
+                <span class="mt-3 mr-5">총 상품금액 <b th:text="${bookDetail.discount}" style="font-size: 20px"
+                                                  class="price"></b>원</span>
+                <button type="submit" class="btn ml-5 mt-4"
+                        style="background-color:rgb(103,167,47); color: white; width: 200px">상품등록
+                </button>
+            </div>
+            </form>
+        </div>
+    </section>
+    <script>
+
+        let price_td = document.querySelectorAll(".price")
+
+        for (let i = 0; i < price_td.length; i++) {
+            let price = price_td[i].innerHTML
+            price *= 1
+
+            if (price == 0) price_td[i].innerHTML = "절판"
+            else price_td[i].innerHTML = price.toLocaleString()
+        }
+
+        let length = document.querySelector(".description").innerHTML.length
+        let s_descri = document.querySelector(".description").innerHTML
+
+        debugger
+        if(length > 500) {
+          document.querySelector(".description").innerHTML = s_descri.substring(0,500) + "...";
+          document.querySelector(".detailBtn").style.visibility = "visible"
+        }
+    </script>
 </div>
-</html>
