--- a/src/main/resources/templates/item/itemDetail.html
+++ b/src/main/resources/templates/item/itemDetail.html
@@ -48,7 +48,9 @@
     </div>
     <div class="container-fluid text-center bg-light p-3 mt-4 fixed-bottom">
       <span class="mt-3 mr-5">총 상품금액 <b th:text="${bookDetail.discount}" style="font-size: 20px" class="price"></b>원</span>
-      <a href="/user/item/cart" class="btn ml-5" style="background-color:rgb(103,167,47); color: white; width: 200px">장바구니</a>
+      <form action="/user/item/cart" method="post">
+        <button type="submit" class="btn ml-5" style="background-color:rgb(103,167,47); color: white; width: 200px">장바구니</button>
+      </form>
       <a href="/" class="btn ml-1" style="border:1px solid rgb(103,167,47); color: rgb(103,167,47); width: 200px">바로구매</a>
     </div>
   </section>
