--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="/admin/item/new" style="color:black">상품 등록</a>
                     </li>
                     <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                        <a class="nav-link" href="/admin/item/add" style="color:black">상품 관리</a>
+                        <a class="nav-link" href="/admin/items" style="color:black">상품 관리</a>
                     </li>
 <!--                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">-->
 <!--                        <a class="nav-link" href="/user/item/search" style="color:black">상품 검색</a>-->
@@ -46,7 +46,7 @@
 <!--                    </li>-->
                 </ul>
                 <span class="navbar-text" sec:authorize="hasAnyAuthority('ROLE_USER')">
-                    <a href="/user/item/cart"  class="p-2" style="color:black"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                    <a href="/cart"  class="p-2" style="color:black"><i class="fas fa-shopping-cart fa-2x"></i></a>
                 </span>
                 <span class="navbar-text ml-3 nav-item dropdown">
                     <a class="far fa-user fa-2x p-2" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
@@ -61,7 +61,7 @@
                         <a class="nav-link notBorder" href="/members/logout">로그아웃</a>
                         </li>
                         <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link notBorder" href="/members/orders">구매이력</a>
+                        <a class="nav-link notBorder" href="/orders">구매이력</a>
                         </li>
                     </div>
                 </span>
