--- a/src/main/resources/templates/item/adminItemForm.html
+++ b/src/main/resources/templates/item/adminItemForm.html
@@ -3,6 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/loginLayout}">
 
+
 <th:block layout:fragment="css">
     <style>
         a {
@@ -34,6 +35,7 @@
             </div>
           </div>
         </div>
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
       </form>
 
 
@@ -64,6 +66,7 @@
             </tbody>
         </table>
     </form>
+
     <script>
 
         let price_td = document.querySelectorAll(".price")
