--- a/src/main/resources/templates/item/itemAdd.html
+++ b/src/main/resources/templates/item/itemAdd.html
@@ -10,8 +10,19 @@
             text-decoration: none;
         }
 
+        table {width: 100%;}
+
+        .pr-4 {
+          width: 100px;
+        }
+
         input, textarea{
             border: none;
+            width: 100%;
+        }
+
+        textarea {
+          height: 180px;
         }
 
     </style>
@@ -33,8 +44,8 @@
             <div class="col-md-4 col-12">
                 <img th:src="${bookDetail.imageSrc}" style="width: 100%">
             </div>
-          <form action="/admin/item/add" method="post" th:object="${bookFormDto}">
             <div class="col-md-8 col-12">
+              <form action="/admin/item/add" method="post" th:object="${bookFormDto}">
                     <table>
                         <tr>
                             <input type="hidden" th:value="${bookDetail.imageSrc}" name="imgSrc">
@@ -67,8 +78,16 @@
                         </tr>
                       <tr>
                         <td class="p-2 pr-4">상세설명</td>
-                        <td class="p-2"><textarea maxlength="500" readonly th:text="${bookDetail.description}" name="description" class="description"></textarea></td>
+                        <td class="p-2"><textarea readonly th:text="${bookDetail.description}" name="description" class="description"></textarea>
+                          <small class="text-secondary detailBtn" style="visibility: hidden"><a data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample" href="#collapseExample">자세히보기</a></small>
+                          <div class="collapse" id="collapseExample">
+                            <div class="card card-body">
+                              <p th:text="${bookDetail.description}"></p>
+                            </div>
+                          </div>
+                        </td>
                       </tr>
+
                         <tr>
                             <td class="p-2 pr-4">가격</td>
                             <td class="p-2"><input type="number" readonly th:value="${bookDetail.discount}"
@@ -79,7 +98,6 @@
                             <td class="p-2"><input type="nuber" name="stockNumber" th:field="*{stockNumber}"></td>
                         </tr>
                     </table>
-            </div>
             <div class="container-fluid text-center bg-light p-3 mt-4 fixed-bottom">
                 <span class="mt-3 mr-5">총 상품금액 <b th:text="${bookDetail.discount}" style="font-size: 20px"
                                                   class="price"></b>원</span>
@@ -87,7 +105,9 @@
                         style="background-color:rgb(103,167,47); color: white; width: 200px">상품등록
                 </button>
             </div>
-            </form>
+                  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+              </form>
+            </div>
         </div>
     </section>
     <script>
@@ -95,19 +115,19 @@
         let price_td = document.querySelectorAll(".price")
 
         for (let i = 0; i < price_td.length; i++) {
-            let price = price_td[i].innerHTML
+            let price = price_td[i].value
             price *= 1
 
-            if (price == 0) price_td[i].innerHTML = "절판"
-            else price_td[i].innerHTML = price.toLocaleString()
+            if (price == 0) price_td[i].value = "절판"
+            else price_td[i].value = price.toLocaleString()
         }
 
         let length = document.querySelector(".description").innerHTML.length
         let s_descri = document.querySelector(".description").innerHTML
 
         debugger
-        if(length > 500) {
-          document.querySelector(".description").innerHTML = s_descri.substring(0,500) + "...";
+        if(length > 200) {
+          document.querySelector(".description").innerHTML = s_descri.substring(0,200) + "...";
           document.querySelector(".detailBtn").style.visibility = "visible"
         }
     </script>
